--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
             <div>
                 <button data-click="close"><span></span><span></span></button>
             </div>
-            <div class="leaderboard">
-                
-            </div>
+            <div class="leaderboard"></div>
         </div>
     </section>
     <audio id="backgroundMusic" autoplay loop preload="auto" src="music/robbery-of-the-century-152126.mp3"></audio>
